# VkCli

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml
samples/: photo_downloader.py
tests/: __init__.py  credentials.sample.py
tests/api/: test_vk_request.py
tests/models/: test_album.py
vk_cli/: __init__.py
vk_cli/api/: __init__.py  vk_api_error.py  vk_const.py  vk_credentials.py  vk_request.py  vk_response.py
vk_cli/api/methods/: __init__.py  _photos.py  _vkapi_base.py
vk_cli/api/misc/: __init__.py  decorators.py  helpers.py
vk_cli/models/: __init__.py  const.py  lister.py  photo.py  photo_album.py  photo_collection.py  vk_object.py
vk_cli/models/data/: __init__.py  attachents.py  group_data.py  photo_album_data.py  photo_data.py  post_data.py  user_data.py  vk_object_data.py
