[tool.poetry]
name = "VK API Client"
version = "0.1.1"
description = "vk.com API wrapper (yet another)"
authors = ["kiriki <kiriciri@gmail.com>"]
repository = "https://github.com/kiriki/vk-cli"
readme = "README.md"
packages = [
    { include = "vk_cli" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
requests = "^2.28.2"
dacite = "^1.6.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[tool.isort]
profile = "pycharm"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
case_sensitive = true
lines_after_imports = -1
lines_between_sections = 1
group_by_package = true
no_lines_before = []
include_trailing_comma = true
force_grid_wrap = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
