[tool.poetry]
name = "vk-api-client"
version = "0.1.1"
description = "vk.com API wrapper (yet another)"
authors = ["kiriki <kiriciri@gmail.com>"]
repository = "https://github.com/kiriki/vk-cli"
readme = "README.md"
packages = [
    { include = "vk_cli" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
requests = "^2.28.2"
dacite = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
pytest = "^7.4.0"
pytest-env = "^0.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = [
    "tests",
    "integration",
]

[tool.isort]
profile = "pycharm"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
case_sensitive = true
lines_after_imports = -1
#lines_between_sections = 1
#lines_between_types = 1
#group_by_package = true
#no_lines_before = []
include_trailing_comma = true
ensure_newline_before_comments = false
#multi_line_output = 5
force_grid_wrap = 4

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310']
preview = true

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true
#select = [
#    "YTT", "S", "B", "A", "C4", "T10", "SIM", "ANN",
#    "I", "C90", "E", "W", "F", "PGH", "UP", "RUF", "TRY",
#]
select = ["ALL"]
#fixable = ["Q", "UP", "SIM", "PT", "ANN", "RET", "PLR"]
ignore = [
    "I001", # unsorted-imports
    "E501", # LineTooLong
    "E731", # DoNotAssignLambda
    "RUF001", #ambiguous-unicode-character-*
    "RUF002",
    "RUF003",
    "ANN101", # missing-type-self
    "ANN102", # missing-type-self
    "D",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["F401"]
"vk_const.py" = ["S105"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.flake8-type-checking]
strict = true

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id", "__name__"]

[tool.ruff.pep8-naming]
classmethod-decorators = [
    "classmethod",
]

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
